--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pretest": "cross-env npm run lint",
     "test": "cross-env tsc && karma start --single-run",
     "test-watch": "concurrently \"./node_modules/.bin/tsc --watch\" \"./node_modules/.bin/karma start\"",
-    "prebuild:amd": "cross-env rimraf dist/amd && node-sass src --output dist/amd && postcss --use autoprefixer dist/amd/*.css -d dist/amd",
+    "prebuild:amd": "cross-env rimraf dist/amd && node-sass src --output dist/amd && postcss --use autoprefixer dist/amd/**/*.css -d dist/amd",
     "build:amd": "cross-env tsc --project tsconfig.build.json --outDir dist/amd --module amd",
     "postbuild:amd": "cross-env copyfiles --up 1 src/**/*.html src/**/*.css dist/amd",
     "prebuild:commonjs": "cross-env rimraf dist/commonjs && node-sass src --output dist/commonjs && postcss --use autoprefixer dist/commonjs/*.css -d dist/commonjs",
